--- a/src/app/c-language/cvariables/cvariables.component.html
+++ b/src/app/c-language/cvariables/cvariables.component.html
@@ -1,3 +1,13 @@
-<p>
-  cvariables works!
-</p>
+<div class="main-container">
+  <h1>Variables in C Language</h1>
+  <p>A variable is an entity that can change during the execution of a program. Variable names are names given to location in
+    memory. These locations can contain integer, float or character constant. </p>
+  <p>In any language the type of variable that can hold depends upon the types of constant that it can handle. For example,
+    an integer can hold only integer constant, a Float can hold only a floating constant and a character can hold only a
+    character constant.</p>
+  <p>A programmer can always create a meaningful variable names For example, if you want to calculate simple interest, it is
+    always advisable to create a names like prin, roi, noy to represent Principle, Rate of interest and Number of Years rather
+    than using a, b and c.</p>
+
+
+</div>
