--- a/src/app/c-language/cvariables/cvariables.component.html
+++ b/src/app/c-language/cvariables/cvariables.component.html
@@ -45,8 +45,8 @@
     <strong>For Example:</strong>
   </p>
   <pre class="pre-text">
-  <code [innerHTML]="externKeyword"></code>
-  </pre>
+    <code [innerHTML]="externKeyword"></code>
+    </pre>
   <p>In the above example three variables are declared, an integer variable ‘a’, a character variable ‘b’ and a string variable
     ‘last’ which can be up to 30 characters.</p>
   <p>
@@ -56,8 +56,8 @@
     <strong>Example:</strong>
   </p>
   <pre class="pre-text">
-    <code [innerHTML]="withoutExtern"></code>
-    </pre>
+      <code [innerHTML]="withoutExtern"></code>
+      </pre>
   <p>
     <strong>Initialization</strong> of a variable means assigning a value to a variable. Below example shows defining and initialization
     in single statement.</p>
@@ -80,17 +80,17 @@
     the function or block in which they are declared. Local Variables has higher priority than global variables.</p>
   <strong>Example:</strong>
   <pre class="pre-text">
-  <code [innerHTML]="localEx"></code>
-  </pre>
+    <code [innerHTML]="localEx"></code>
+    </pre>
   <p>In the above example ‘x’ is a local variable which is only accessible inside that function in which they are defined. If
     you try to use this variable ‘x’ outside the function, you will get an error. Here variable ‘x’ is exists until the function1()
     is executing. If the function1() ends the variable ‘x’ is destroyed.</p>
   <strong>Example Program for Local variables</strong>
   <pre class="pre-text">
-<code [innerHTML]="localProg"></code>
-</pre>
+  <code [innerHTML]="localProg"></code>
+  </pre>
   <strong>Output:</strong>
-  <p>In the above example program variable ‘x’ is declared inside the loop or block i.e inside braces({}) are completely difference
+  <p>In the above example program variable ‘x’ is declared inside the loop or block i.e inside braces <span [innerHTML]="'({})'"></span> are completely difference
     from variable ‘x’ declared outside the loop or block. Inner variable ‘x’ is accessible only inside the loop. Once the
     execution of the loop or block is completed the inner variable ‘x’ is desctroyed.</p>
   <h3>2. Global Variables</h3>
@@ -98,15 +98,15 @@
     modify global variables. These variables must be declared before main() function.</p>
   <strong>Example:</strong>
   <pre class="pre-text">
-<code [innerHTML]="globalEx"></code>
-</pre>
+  <code [innerHTML]="globalEx"></code>
+  </pre>
   <p>In the above example global variables ‘x’ and ‘y’ are defined outside the function with the type ‘int’. These variables
     are accessed in the main() function. Unlike local variables, global variables are not destroyed as soon as the function
     ends. They are accessible to any function until the program is executing.</p>
   <strong>Example program for global variables:</strong>
   <pre class="pre-text">
-  <code [innerHTML]="globalProg"></code>
-  </pre>
+    <code [innerHTML]="globalProg"></code>
+    </pre>
   <strong>Output:</strong>
   <p>In the above program variables ‘x’ and ‘y’ are global variables declared and initialized outside the main() function. These
     variables are accessible from inner block and from outer block. Unlike Local variables, global variables are not destroyed.
@@ -117,15 +117,15 @@
     will be ‘0’.</p>
   <strong>Example:</strong>
   <pre class="pre-text">
-  <code [innerHTML]="staticEx"></code>
-  </pre>
+    <code [innerHTML]="staticEx"></code>
+    </pre>
   <p>In the above program, if you call the function ‘increment1()’ many times, local variable will print the same value for
     each function call i.e; 11,11,11,11,11, and so on. The static variable will print the incremented value in each function
-    call i.e; 11,12,13,14,15 and so on.</P>
+    call i.e; 11,12,13,14,15 and so on.</p>
   <strong>Example program for static variable:</strong>
   <pre class="pre-text">
-<code [innerHTML]="staticProg"></code>
-</pre>
+  <code [innerHTML]="staticProg"></code>
+  </pre>
   <strong>Output:</strong>
   <p>In the above function variable ‘x’ is a local variable and ‘y’ is a static variable. If you call the function ‘increment1()’
     multiple times, local variable will print the same value for each function call i.e 11,11,11,11 and son on. The static
