Analytics Code & 2 Posts added

--- a/src/app/c-language/cconstants/cconstants.component.html
+++ b/src/app/c-language/cconstants/cconstants.component.html
@@ -2,7 +2,7 @@
   <h1>Constants in C</h1>
   <p>In C, constants are fixed values in the program that may not change during the execution, whereas a variable is an entity
     that may change during the execution. Constants are also called as ‘literals’. In this chapter we will discuss only constants,
-    Variables are discussed in next chapter.</p>
+    <a href='https://ifelseloop.com/c-programming/variables-in-c' target='_blank'>variables</a> are discussed in next chapter.</p>
   <h1>Types of C Constants</h1>
   <p>In <a href='https://ifelseloop.com/c-programming' target='_blank'>C language</a> constants are divided into two types.</p>
   <ol>
