--- a/src/app/c-language/cintroduction/cintroduction.component.html
+++ b/src/app/c-language/cintroduction/cintroduction.component.html
@@ -137,6 +137,6 @@
   <p>This is the easy way to compile and run the C programs in your operating system.</p>
   <p>I hope that this complete C tutorial guide will give you a clear idea about what is C language and complete knowledge on
     C programming. But before we enter in to programming you need to learn some basics concepts like what are <a href='https://ifelseloop.com/c-programming/constants-in-c' target='_blank'>constants in C</a>,
-    Variables, Identifiers and Keywords. We will discuss all these topics in the next chapter, stay tuned…</p>
+    <a href='https://ifelseloop.com/c-programming/variables-in-c' target='_blank'>variables</a>, Identifiers and Keywords. We will discuss all these topics in the next chapter, stay tuned…</p>
 
 </div>
