Internal Links Placed

--- a/src/app/c-language/c-keywords/c-keywords.component.html
+++ b/src/app/c-language/c-keywords/c-keywords.component.html
@@ -3,7 +3,7 @@
 <p>In this tutorial you will learn keywords in C programming, Identifiers in C and also how to name a variable.</p>
 <h2>Keywords in C Programming</h2>
 <p>Keywords are also called as ‘Reserved Words’ whose meaning has already been explained to C compilers. Keywords cannot
-        be used as a variables names or identifiers because if we do we are trying to give a new meaning to the keyword,
+        be used as a <a href='https://ifelseloop.com/c-programming/variables-in-c' target='_blank'>variable names</a> or identifiers because if we do we are trying to give a new meaning to the keyword,
         which is not accepted by the compiler. In C language total 32 keywords are available. Below table shows all the 32
         keywords.</p>
 <table style="width:100%">
@@ -59,7 +59,7 @@
 <p>We will discuss each of these keywords in later chapters where these keywords are relevant.</p>
 <h2>Indentifiers in C Language</h2>
 <p>Identifiers are names given to variables, structures and constants etc. Identifiers must be unique because they are created
-        to given a unique name to a variable or constants or structures to identify it during the execution of a program.</p>
+        to given a unique name to a variable or <a href='https://ifelseloop.com/c-programming/constants-in-c' target='_blank'>constants</a> or structures to identify it during the execution of a program.</p>
 <p> Identifiers and keywords are different and you cannot use keyword as an identifier. You can give any name to identifiers except keywords. It is always a good practice to give a meaningful name to the identifiers because you and your team are easy to understand.</p>
 <p><strong>Examples:</strong></p>
 <div class="code-text">
@@ -90,7 +90,7 @@
 <p><code>balance money – must not contain a white space</code></p>
 </div>
 <h2>Character Set</h2>
-<p>In C language Character set represents Alphabets, digits and special symbols used to represent information.</p>
+<p>In <a href='https://ifelseloop.com/c-programming' target='_blank'>C language</a> Character set represents Alphabets, digits and special symbols used to represent information.</p>
 <h3>Alphabet:</h3>
 <p>Upper Case: A,B,C,D,…….Z</p>
 <p>Lowe Case: a,b,c,d,………..z</p>       
